--- a/二轮考核/font_4051284_yvydg21eap9/iconfont.css
+++ b/二轮考核/font_4051284_yvydg21eap9/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4051284 */
-  src: url('iconfont.woff2?t=1683361061460') format('woff2'),
-       url('iconfont.woff?t=1683361061460') format('woff'),
-       url('iconfont.ttf?t=1683361061460') format('truetype');
+  src: url('iconfont.woff2?t=1683459642497') format('woff2'),
+       url('iconfont.woff?t=1683459642497') format('woff'),
+       url('iconfont.ttf?t=1683459642497') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-jia:before {
+  content: "\e604";
+}
+
+.icon-cai:before {
+  content: "\e603";
+}
+
+.icon-dianzan1:before {
+  content: "\ec7f";
+}
+
+.icon-jinzhi:before {
+  content: "\e654";
 }
 
 .icon-shoucangxuanzhong:before {
