--- a/二轮考核/index.css
+++ b/二轮考核/index.css
@@ -230,6 +230,7 @@ header #logo {
     font-size: 30px;
     opacity: 0;
     transition: 0.2s;
+    cursor: pointer;
 }
 
 .ready>div:hover .laterView {
@@ -245,7 +246,7 @@ header #logo {
 
     width: 100%;
     height: 40px;
-    line-height: 20px;
+    line-height: 30px;
     padding: 10px;
 
     color: white;
@@ -253,6 +254,10 @@ header #logo {
     opacity: 1;
     background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.73));
     transition: all 0.3s;
+}
+
+.ready>div .videoCard p {
+    font-size: 16px;
 }
 
 .ready>div .videoCard p i.iconfont {
