--- a/二轮考核/person.css
+++ b/二轮考核/person.css
@@ -62,7 +62,7 @@ header .headNav form .input:hover {
     width: 100%;
     height: 100%;
     text-align: center;
-    line-height: 50px;
+    line-height: 58px;
     font-size: 12px;
     background-color: rgba(0, 0, 0, 0.388);
     opacity: 0;
@@ -410,6 +410,11 @@ header .headNav form .input:hover {
     border-top-left-radius: 5px;
     color: #fff;
     background-color: rgba(0, 0, 0, 0.419);
+    transition: all 0.5s;
+}
+
+.collections .collectionList .collection .video:hover::after {
+    opacity: 0;
 }
 
 .collections .collectionList .collection .video video {
