--- a/二轮考核/person.css
+++ b/二轮考核/person.css
@@ -28,6 +28,21 @@ header .headNav form .input:hover {
     background: #fff;
 }
 
+/* 导航栏登出按键重写 */
+header .headNav .rightNav li .avata.active {
+    transform: scale(1.2) translate(-10px, 0px);
+    z-index: 2;
+}
+
+header .headNav .rightNav li .hidden {
+    transform: translate(2px, 10px) scale(0);
+}
+
+header .headNav .rightNav li .hidden.active {
+    transform: translate(2px, 20px) scale(0.7);
+    z-index: 0;
+}
+
 .headImg {
     position: relative;
     height: 200px;
