--- a/二轮考核/video.css
+++ b/二轮考核/video.css
@@ -39,6 +39,21 @@ header {
     z-index: 200;
 }
 
+/* 导航栏登出按键重写 */
+header .headNav .rightNav li .avata.active {
+    transform: scale(1.2) translate(-10px, 0px);
+    z-index: 2;
+}
+
+header .headNav .rightNav li .hidden {
+    transform: translate(2px, 10px) scale(0);
+}
+
+header .headNav .rightNav li .hidden.active {
+    transform: translate(2px, 20px) scale(0.7);
+    z-index: 0;
+}
+
 /* 内容部分 */
 .content {
     padding-top: 90px;
@@ -107,13 +122,24 @@ header {
 .content .left .sendBarrage .condition {
     margin: 0 20px;
     height: 46px;
-    font-size: 18px;
+    font-size: 12px;
     margin-right: 20px;
-    color: #61666d;
+    color: #61666dc7;
+}
+
+.content .left .sendBarrage #barrageToggle .iconfont,
+.content .left .sendBarrage #barrageSetting .iconfont {
+    color: #686868d3;
+    cursor: pointer;
+}
+
+.content .left .sendBarrage #barrageToggle .iconfont.active {
+    display: none;
 }
 
 .content .left .sendBarrage #barrageSetting {
-    margin: 0 20px;
+    margin: 0 10px;
+    cursor: pointer;
 }
 
 .content .left .sendBarrage .barInput {
@@ -186,6 +212,7 @@ header {
 }
 
 .content .left .subcribe .subLeft button svg {
+    color: #61666d;
     position: relative;
     z-index: 20;
 }
@@ -1062,7 +1089,7 @@ header {
 }
 
 .content .left .video .watermark.short {
-    left: 340px;
+    left: 35%;
 }
 
 .content .left .video .watermark .up {
@@ -1187,7 +1214,7 @@ video::-webkit-media-controls {
 
 
 .content .left .video .control .left {
-    flex: 0 0 50%;
+    flex: 0 0 30%;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
@@ -1208,7 +1235,7 @@ video::-webkit-media-controls {
 }
 
 .content .left .video .control .right {
-    flex: 0 0 50%;
+    flex: 0 0 70%;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
